# BLP-Viewer

./: .gitignore  CHANGELOG.md  README.md
gui/: GUI_REDESIGN_PLAN.md
gui/src/: image_io.cpp  main.cpp  settings.cpp  style.cpp  style.h  ui_left_panel.cpp  ui_left_panel.h  ui_main.cpp  ui_main.h  ui_right_panel.cpp  utils.cpp  utils.h
gui/src/blp/: blp_codec.cpp
qt_gui/: CMakeLists.txt  README.md  build.ps1
qt_gui/shell_ext/: blp_thumbnail.cpp
qt_gui/src/: blp_api.cpp  blp_api.h  blp_viewer.rc  image_io.cpp  image_io.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h
src/: lib.rs
src/ui/: ui_main.cpp
